<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.example</groupId>
  <artifactId>testdemo</artifactId>
  <version>1.0-SNAPSHOT</version>

  <name>testdemo</name>
  <url>https://maven.apache.org</url>

  <parent>
    <groupId>com.example</groupId>
    <artifactId>demoparent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <relativePath>../demoparent/pom.xml</relativePath>
  </parent>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <testcontainers.version>1.20.4</testcontainers.version>
  </properties>

  <dependencies>
    <!-- Does not seem to exist anymore -->
    <!-- <dependency>
      <groupId>io.cypress</groupId>
      <artifactId>cypress</artifactId>
      <version>12.6.0</version>
      <scope>test</scope>
    </dependency> -->

    <!-- These 3 are the depedencies to use, but the container does not start up nor can map cypress e2e properly -->
    <!-- <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>testcontainers</artifactId>
      <version>1.20.4</version>
      <scope>test</scope>
    </dependency> -->
    <dependency>
        <groupId>io.github.wimdeblauwe</groupId>
        <artifactId>testcontainers-cypress</artifactId>
        <version>1.9.1</version>
        <scope>test</scope>
    </dependency>
    <!-- For checking if JUnit5 can be used to run cucumber-cypress with maven -->
    <!-- <dependency>
        <groupId>org.testcontainers</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>1.20.4</version>
        <scope>test</scope>
    </dependency> -->

    <!-- Does not seem to exist anymore -->
    <!-- <dependency>
    <groupId>com.github.jengelman</groupId>
    <artifactId>maven-cypress-plugin</artifactId>
    <version>1.0.5</version>
    </dependency> -->
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-java</artifactId>
      <version>4.27.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-firefox-driver</artifactId>
      <version>4.27.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-chrome-driver</artifactId>
      <version>4.27.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
        <groupId>io.rest-assured</groupId>
        <artifactId>rest-assured</artifactId>
        <version>5.3.0</version>
        <scope>test</scope>
    </dependency>
    <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>2.13.3</version>
        <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <plugins>
        <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <release>21</release>
          <compilerArgs>
            <arg>-proc:full</arg>
          </compilerArgs>
          <basedir/>
          <buildDirectory/>
          <outputDirectory/>
          <projectArtifact/>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.0</version>
        <configuration>
          <properties>
            <configurationParameters> 
                cucumber.junit-platform.naming-strategy=long
                cucumber.execution.parallel.enabled=true
                cucumber.execution.parallel.config.strategy=dynamic
                cucumber.execution.parallel.config.dynamic.factor=9
                cucumber.execution.execution-mode.feature=same_thread
            </configurationParameters>
          </properties>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>cypress.tests</id>
      <activation>
        <property>
          <name>cypress.tests</name>
        </property>
      </activation>
      <build>
         <testResources>
            <testResource>
                <directory>src/test/resources</directory>
            </testResource>
            <testResource>
                <directory>src/test/e2e</directory>
                <targetPath>e2e</targetPath>
            </testResource>
        </testResources>
        <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.5.0</version>
            <configuration>
              <properties>
                <configurationParameters> 
                  cucumber.junit-platform.naming-strategy=long
                  cucumber.execution.parallel.enabled=true
                  cucumber.execution.parallel.config.strategy=dynamic
                  cucumber.execution.parallel.config.dynamic.factor=9
                  cucumber.execution.execution-mode.feature=same_thread
                </configurationParameters>
              </properties>
              <includes>
                <include>**/RunCucumberCypressTest</include>
              </includes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>selenium.tests</id>
      <activation>
        <property>
          <name>selenium.tests</name>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.5.0</version>
            <configuration>
              <properties>
                <configurationParameters> 
                  cucumber.junit-platform.naming-strategy=long
                  cucumber.execution.parallel.enabled=true
                  cucumber.execution.parallel.config.strategy=dynamic
                  cucumber.execution.parallel.config.dynamic.factor=9
                  cucumber.execution.execution-mode.feature=same_thread
                </configurationParameters>
              </properties>
              <includes>
                <include>**/RunCucumberSeleniumTest</include>
              </includes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>api.tests</id>
      <activation>
        <property>
          <name>api.tests</name>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.5.0</version>
            <configuration>
              <properties>
                <configurationParameters> 
                  cucumber.junit-platform.naming-strategy=long
                  cucumber.execution.parallel.enabled=true
                  cucumber.execution.parallel.config.strategy=dynamic
                  cucumber.execution.parallel.config.dynamic.factor=9
                  cucumber.execution.execution-mode.feature=same_thread
                </configurationParameters>
              </properties>
              <includes>
                <include>**/RunCucumberAPITest</include>
              </includes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
